Fix weird modal overflowing

--- a/src/angular/planit/src/assets/sass/components/_modal.scss
+++ b/src/angular/planit/src/assets/sass/components/_modal.scss
@@ -48,6 +48,8 @@
   transform: translate(-50%, -50%);
   z-index: 1050;
   outline: 0;
+  right: inherit;
+  bottom: inherit;
 }
 
 .modal-content {
